--- a/card.html
+++ b/card.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>NeoG component library - Card</title>
-    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/icon.css" />
     <link rel="stylesheet" href="css/badge.css" />
     <link rel="stylesheet" href="css/card.css" />
