--- a/card.html
+++ b/card.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>NeoG component library - Card</title>
-    <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/icon.css" />
-    <link rel="stylesheet" href="css/badge.css" />
-    <link rel="stylesheet" href="css/card.css" />
+    <link rel="stylesheet" href="css/neog-styles.css" />
 </head>
 
 <body class="neog-typography">
