Index page added

--- a/card.html
+++ b/card.html
@@ -5,10 +5,11 @@
 </head>
 
 <body class="neog-typography">
+    <h4><a href="index.html">Back to Home</a></h4>
     <h1 class="neog__demo-pagetitle">Card</h1>
     <div class="neog__demo-wrapper">
         <!-- Variant 1-->
-        <div class="neog-card my-2">   
+        <div class="neog-card shadow-small my-2">   
             <div class="neog-card__body">
                 <div class="neog-card__hero-bg">
                     <h1>neoG.camp</h1>
