--- a/alert.html
+++ b/alert.html
@@ -6,6 +6,7 @@
 </head>
 
 <body class="neog-typography">
+    <h4><a href="index.html">Back to Home</a></h4>
     <h1 class="neog__demo-pagetitle my-2">Alerts</h1>
     <div>
         <h3 class="my-2">Alert with text</h3>
