--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <nav >
         <ul class="neog__demo-navigation">
             <li><a href="index.html" class="p-3">Home</a></li>
-            <li><a href="alert.html" class="p-3">Alerts</a></li>
-            <li><a href="buttons.html" class="p-3">Buttons</a></li>
-            <li><a href="card.html" class="p-3">Card</a></li>
+            <li><a href="components/alert.html" class="p-3">Alerts</a></li>
+            <li><a href="components/buttons.html" class="p-3">Buttons</a></li>
+            <li><a href="components/card.html" class="p-3">Card</a></li>
+            <li><a href="components/avatar.html" class="p-3">Avatar</a></li>
         </ul>
     </nav>
 </body>
