Text input component has created with different states

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="alert.html" class="p-3">Alerts</a></li>
             <li><a href="buttons.html" class="p-3">Buttons</a></li>
             <li><a href="card.html" class="p-3">Card</a></li>
+            <li><a href="input.html" class="p-3">Input</a></li>
         </ul>
     </nav>
 </body>
