Responsive image component created

--- a/input.html
+++ b/input.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>NeoG component library - Alerts</title>
+    <title>NeoG component library - Input</title>
     <link rel="stylesheet" href="css/neog-styles.css" />
 </head>
 
