--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="buttons.html" class="p-3">Buttons</a></li>
             <li><a href="card.html" class="p-3">Card</a></li>
             <li><a href="input.html" class="p-3">Input</a></li>
+            <li><a href="image.html" class="p-3">Images</a></li>
         </ul>
     </nav>
 </body>
